Links and image update

--- a/research/html/sections/fow.html
+++ b/research/html/sections/fow.html
@@ -3,34 +3,34 @@
 <h3 class='research-title'> Automation & Future of Work </h3>
 
 <div class='row'>
-    <div class='col-sm-2' style='display:flex; align-items: center;flex-wrap:wrap;'>
-        <img class='center-block research-image' src="research/assets/auto.png">
+    <div class='col-sm-2 research-image-column'>
+        <img class='research-image' src="research/assets/auto.png">
     </div>
     <div class='col-sm-6'>
         <div class='row'><h5>Inferring Work Task Automatability from AI Expert Evidence</h5></div>
         <div class='row'><p>A new dataset leveraging machine learning to infer how automatable work tasks are. Implications for employment and the future of work.</p></div>
-        <div class='row'><p><a href=''>Paper</a> | <a href=''>Code</a></p></div>
+        <div class='row'><p><em>Paper + Code released in December '18 upon upcoming publication</em></p></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2' style='display:flex; align-items: center;flex-wrap:wrap;'>
-        <img class='center-block research-image' src="research/assets/skills.png">
+    <div class='col-sm-2 research-image-column'>
+        <img class='research-image' src="research/assets/skills.png">
     </div>
     <div class='col-sm-6'>
         <div class='row'><h5>Pearson Future of Skills Report</h5></div>
         <div class='row'><p>Using human-in-the-loop machine learning to predict future job demand. I lead data preparation and contributed to modeling strategy.</p></div>
-        <div class='row'><p><a href=''>Report</a> | <a href=''>Code</a></p></div>
+        <div class='row'><p><a href='https://futureskills.pearson.com/research/'>Report</a></p></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2' style='display:flex; align-items: center;flex-wrap:wrap;'>
-        <img class='center-block research-image' src="research/assets/saf.png">
+    <div class='col-sm-2 research-image-column'>
+        <img class='research-image' src="research/assets/saf.png">
     </div>
     <div class='col-sm-6'>
         <div class='row'><h5>Sovereign Automation Fund</h5></div>
         <div class='row'><p>A small research grant to study a government institution to better prepare workers for the future of automation. Winner of the 2017 Audacious Futures Canada competition.</p></div>
-        <div class='row'><p><a href=''>Website</a> | <a href=''>Press Release</a></p></div>
+        <div class='row'><p><a href='http://www.automationfund.ca'>Website</a></p></div>
     </div>
 </div>
