--- a/research/html/sections/machine_learning.html
+++ b/research/html/sections/machine_learning.html
@@ -3,99 +3,117 @@
 <h3 class='research-title'> Machine Learning </h3>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="research/assets/pigebaq.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/pigebaq'>
+        <img class='research-thumbnail' src="research/assets/pigebaq.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>PIGEBaQ: Principled Interpretation of Gradient Evaluations using Bayesian Quadrature</h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/pigebaq'>PIGEBaQ: Principled Interpretation of Gradient Evaluations using Bayesian Quadrature</a></h5></div>
         <div class='row'><p>Exploiting the properties of Bayesian Quadrature to make interpreting black-box ML models easier.</p></div>
         <div class='row'><p><em>Paper + Code released in December '18</em></p></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/archimedes'>
+        <img class='research-thumbnail' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Archimedes: Curiousity-Driven Bayesian Optimization with Joint Active Causal Learning <span class='in-progress'>(In Progress)</span></h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/archimedes'>Archimedes: Curiousity-Driven Bayesian Optimization with Joint Active Causal Learning <span class='in-progress'>(In Progress)</span></a></h5></div>
         <div class='row'><p>Jointly learning from Bayesian Optimization and active learning of structural causal models for more efficient BO.</p></div>
         <!-- <div class='row'></div> -->
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="research/assets/hippocrates.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/hippocrates'>
+        <img class='research-thumbnail' src="research/assets/hippocrates.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Hippocrates: Time-Dynamic Synthetic Controls for Counterfactual Inference <span class='in-progress'>(In Progress)</span></h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/hippocrates'>Hippocrates: Time-Dynamic Synthetic Controls for Counterfactual Inference <span class='in-progress'>(In Progress)</span></a></h5></div>
         <div class='row'><p>Multitask Gaussian Processes for learning robust, time-varying counterfactual relationships.</p></div>
         <!-- <div class='row'></div> -->
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="research/assets/auto.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/automation'>
+        <img class='research-thumbnail' src="research/assets/auto.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Inferring Work Task Automatability from AI Expert Evidence</h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/automation'>Inferring Work Task Automatability from AI Expert Evidence</a></h5></div>
         <div class='row'><p>A new dataset leveraging machine learning to infer how automatable work tasks are. Implications for employment and the future of work.</p></div>
         <div class='row'><p><em>Paper + Code released in December '18 upon upcoming publication</em></p></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="research/assets/review.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/causality'>
+        <img class='research-thumbnail' src="research/assets/review.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Causality in Modern Machine Learning: A Review <span class='in-progress'>(In Progress)</span></h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/causality'>Causality in Modern Machine Learning: A Review <span class='in-progress'>(In Progress)</span></a></h5></div>
         <div class='row'><p>An overview of recent advances in how tools from causality are making learning more efficient and generalizable.</p></div>
         <!-- <div class='row'><p></p></div> -->
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="research/assets/apnea.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/apnea'>
+        <img class='research-thumbnail' src="research/assets/apnea.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Machine Learning-based Pediatric Sleep Apnea Prioritization Benchmarking</h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/apnea'>Machine Learning-based Pediatric Sleep Apnea Prioritization Benchmarking</a></h5></div>
         <div class='row'><p>Using machine learning for better-than-human pediatric sleep apnea risk prioritization in low-data, fast-testing regimes.</p></div>
         <div class='row'><p><em>Code forthcoming soon</em></p></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/diabetes'>
+        <img class='research-thumbnail' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Diabetes Onset Prediction using Data Augmentation & Ensemble Methods</h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/diabetes'>Diabetes Onset Prediction using Data Augmentation & Ensemble Methods</a></h5></div>
         <div class='row'><p>An end-to-end strategy for using data augmentation & ensemble methods to use patient health records to predict diabetes onset in the next year.</p></div>
         <div class='row'><p><em>Code forthcoming</em></p></div>
     </div>
 </div>
 
 <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="research/assets/rail.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href='research/rail'>
+        <img class='research-thumbnail' src="research/assets/rail.png">
+        </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>RAIL, the Rhodes Artificial Intelligence Lab</h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5><a href='research/rail'>RAIL, the Rhodes Artificial Intelligence Lab</a></h5></div>
         <div class='row'><p>Co-founded a graduate student applied ML lab using ML to tackle large societal challenges in health, energy, government, and more.</p></div>
         <div class='row'><p><a href='http://www.rhodeslab.com'>RAIL Homepage</a> | <a href='https://issuu.com/rhodeshouse/docs/final_1558_rhodes_scholar_2018_3web/16'>Article</a></p></div>
     </div>
 </div>
 
 <!-- <div class='row'>
-    <div class='col-sm-2 research-image-column'>
-        <img class='research-image' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
+    <div class='col-sm-2 research-thumbnail-column'>
+        <a href=''>
+        <img class='research-thumbnail' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
+            </a>
     </div>
-    <div class='col-sm-6'>
-        <div class='row'><h5>Predicting Energy Market Uplift with LSTMs</h5></div>
+    <div class='col-sm-8'>
+        <div class='row'><h5>Predicting Energy Market Uplift with LSTMs</a></h5></div>
         <div class='row'><p>Using LSTMs and comparative models to predict 30-minute ahead energy-market uplift.</p></div>
         <div class='row'><p><a href=''>Slide deck</a> | <a href=''>Code</a></p></div>
     </div>
