--- a/research.html
+++ b/research.html
@@ -15,8 +15,8 @@
         <div w3-include-html="header.html"></div>
         <div class='row main-content-inner'>
             <div class='container inner-content'>
-                <div class='research-section' w3-include-html="research/html/sections/machine_learning.html"></div>
-                <div class='research-section' w3-include-html="research/html/sections/fow.html"></div>
+                <div w3-include-html="research/html/sections/machine_learning.html"></div>
+                <div w3-include-html="research/html/sections/fow.html"></div>
                 <!-- <div w3-include-html="research/html/sections/other.html"></div> -->
             </div>
         </div>
