--- a/research/diabetes.html
+++ b/research/diabetes.html
@@ -45,7 +45,7 @@
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
-                        <img class='research-image-column research-image' src='assets/auto_occ.png'>
+                        <img class='research-image-column research-image' src='assets/diabetes_slide.png'>
                     </div>
                 </div>
 
