--- a/research/archimedes.html
+++ b/research/archimedes.html
@@ -42,13 +42,13 @@
                 </div>
 
 
-                <div class='row'>
+<!--                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8 research-image-column'>
                         <img class='research-image' src='assets/auto_occ.png'>
                         <img class='research-image' src='assets/auto_wa.png'>
                     </div>
-                </div>
+                </div> -->
 
                 <div class='row'>
                     <div class='col-sm-2'>
