--- a/research/future.html
+++ b/research/future.html
@@ -45,7 +45,7 @@
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
-                        <img class='research-image-column research-image' src='assets/apnea.png'>
+                        <img class='research-image-column research-image' src='assets/futureskills_results.png'>
                     </div>
                 </div>
 
