new css and wording

--- a/research/apnea.html
+++ b/research/apnea.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Machine Learning-based Pediatric Sleep Apnea Prioritization </h4>
+                        <p><em>Paper under submission at a leading sleep journal; code published December 2018.</em></p>
                     </div>
                 </div>
 
@@ -44,7 +45,7 @@
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
-                        <img class='research-image-column research-image' src='assets/apnea.png'>
+                        <img class='research-image-column research-image-large' src='assets/apnea.png'>
                     </div>
                 </div>
 
