--- a/research/archimedes.html
+++ b/research/archimedes.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Archimedes: Curiousity-Driven Bayesian Optimization with Joint Active Causal Learning <span class='in-progress'>(In Progress)</span></h4>
+                        <p><em>Research under development. Results will be shared in January 2018.</em></p>
                     </div>
                 </div>
 
