--- a/research/causality.html
+++ b/research/causality.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Causality in Modern Machine Learning: A Review</h4>
+                        <p><em>To be presented at CIRM conference, Nov. 2018. Paper released ~Dec 2018.</em></p>
                     </div>
                 </div>
 
@@ -41,14 +42,14 @@
                     </div>
                 </div>
 
-
+<!-- 
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
                         <img class='research-image-column research-image' src='assets/apnea.png'>
                     </div>
                 </div>
-
+ -->
                 <div class='row'>
                     <div class='col-sm-2'>
                         <h5>Results</h5>
