--- a/research/rail.html
+++ b/research/rail.html
@@ -41,13 +41,13 @@
                     </div>
                 </div>
 
-
+<!-- 
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
                         <img class='research-image-column research-image' src='assets/apnea.png'>
                     </div>
-                </div>
+                </div> -->
 
                 <div class='row'>
                     <div class='col-sm-2'>
