--- a/research/diabetes.html
+++ b/research/diabetes.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Diabetes Onset Prediction using Data Augmentation & Ensemble Methods</h4>
+                        <p><em>Code to be released late Dec. 2018.</em></p>
                     </div>
                 </div>
 
@@ -45,7 +46,7 @@
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
-                        <img class='research-image-column research-image' src='assets/diabetes_slide.png'>
+                        <img class='research-image-column research-image-large' src='assets/diabetes_slide.png'>
                     </div>
                 </div>
 
@@ -54,7 +55,7 @@
                         <h5>Solution</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>Due to the low incidence, we first used SMOTE to generate synthetic samples. I validated the prediction uplift of SMOTE using cross-validation; in this case, using synthetic samples (a version of data augmentation) is indeed useful. I then built out several classifiers, before ultimately settling on CatBoost, a gradient-boosting technique with improved performance for mixed categorical-continuous data. It was clear that the biggest limitation was limited data, so I developed a data acquisition strategy for the company.</p>
+                        <p>We used a splitting-oversampling-synthesizing data preparation model to augment existing data. This had a 50% AUC boost over non-augmented modelling. Between several classifiers, CatBoost performed best due to the mixed nature of the data, and the ability to handle missing data as an information-containing signal for prediction. It was clear that the biggest limitation to performance was limited data, so I developed a data acquisition strategy for the partner. Immeidately they were capable of capturing more high dimensional data, which necessitated suggestions around dealing with high-dimensional data and finding robust embeddings separating diabetes-positive and negative cases.</p>
                     </div>
                 </div>
 
@@ -63,7 +64,7 @@
                         <h5>Results</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>not only did we allow the client to think through its data acquistion and modelling pipeline better, but our model was able to match and slightly outperform what internal benchmark models were producing.</p>
+                        <p>Not only did we allow the partner to think through its data acquistion and modelling pipeline to form a foundation for future performance, but our model was able to match and slightly outperform what internal benchmark models were producing.</p>
                     </div>
                 </div>
             </div>
