--- a/research/hippocrates.html
+++ b/research/hippocrates.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Hippocrates: Time-Dynamic Synthetic Controls for Counterfactual Inference <span class='in-progress'>(In Progress)</span></h4>
+                        <p><em>Research under development. Results to be shared January 2018.</em></p>
                     </div>
                 </div>
 
@@ -45,7 +46,7 @@
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
-                        <img class='research-image-column research-image' src='assets/europe.png'>
+                        <img class='research-image-column research-image-large' src='assets/europe.png'>
                     </div>
                 </div>
 
