--- a/research/pigebaq.html
+++ b/research/pigebaq.html
@@ -20,6 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>PIGEBaQ: Principled Interpretation of Gradient Evaluations using Bayesian Quadrature</h4>
+                        <p><em>Code to be packaged and released, December 2018.</em></p>
                     </div>
                 </div>
 
@@ -45,7 +46,7 @@
                 <div class='row'>
                     <div class='col-sm-2'></div>
                     <div class='col-sm-8'>
-                        <img class='research-image-column research-image' src='assets/pigebaq_model.png'>
+                        <img class='research-image-column research-image-large' src='assets/pigebaq_model.png'>
                     </div>
                 </div>
 
