--- a/header.html
+++ b/header.html
@@ -5,9 +5,9 @@
   </button>
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
     <ul class="navbar-nav">
-<!--       <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="research.html">Research</a>
-      </li> -->
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="blog">Blog</a>
       </li>
