More faithful description

--- a/research.html
+++ b/research.html
@@ -15,6 +15,7 @@
         <div w3-include-html="header.html"></div>
         <div class='row main-content-inner'>
             <div class='container inner-content'>
+                <div w3-include-html="research/html/sections/intro.html"></div>
                 <div w3-include-html="research/html/sections/machine_learning.html"></div>
                 <div w3-include-html="research/html/sections/fow.html"></div>
                 <!-- <div w3-include-html="research/html/sections/other.html"></div> -->
