apnea language update

--- a/research/apnea.html
+++ b/research/apnea.html
@@ -38,7 +38,7 @@
                         <h5>Challenge</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>Partnering with the School of Medicine at the University of Maryland-Baltimore, we explored if we could improve on the current in-person tests to prioritize pediatric sleep apnea cases. Currently, a nurse or doctor asks a series of questions and generates a point score estimating the likelihood the patient has sleep apnea or needs testing. This testing is extremely costly (~$3B/year total spent) and time consuming (takes a 12+ hour hospital stay). If we could develop a machine learning tool that prioritizes high-risk cases better using only information available to the nurse, we are more likely to get kids the care they need.</p>
+                        <p>Partnering with researchers at a major medical school in the US, we explored if we could improve on the current in-person tests to prioritize pediatric sleep apnea cases. Currently, a nurse or doctor asks a series of questions and generates a point score estimating the likelihood the patient has obstructive sleep apnea (OSA), the level of severity, and the necessary testing. This testing is extremely costly (~$3B/year total spent) and time consuming (a 12+ hour hospital stay). If we could develop a machine learning tool that prioritizes high-risk cases better using only information available to the nurse, we are more likely to get kids the care they need, quicker.</p>
                     </div>
                 </div>
 
@@ -54,7 +54,7 @@
                         <h5>Solution</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>Working with small (~450 observation) datasets, we used simple feature engineering and dimensionality reduction to increase the robustness of kernel-based classifiers. On k-fold cross validation, our method outperformed other low-data-regime classifiers as well as the current state-of-the-art of  points score-based human heuristic tests.</p>
+                        <p>Working with small (~450 observation) datasets, we showed how straightforward feature engineering and dimensionality reduction can significantly improve our classifiers over the human-heuristic benchmark. Good feature engineering with optimized nonparametric kernel methods were chosen to extract what we believe are patterns of hidden heterogeneity in the model.</p>
                     </div>
                 </div>
 
