--- a/research/automation.html
+++ b/research/automation.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Inferring Work Task Automatability from AI Expert Evidence</h4>
-                        <p><em>To be published at a workshop, December 2018. Submitted to leading conference. Code + data to be released Dec/Jan 2018.</em></p>
+                        <p><em>To be published at a NIPS workshop, December 2018. Submitted to leading conference. Code + data to be released Dec/Jan 2018.</em></p>
                     </div>
                 </div>
 
