--- a/research/causality.html
+++ b/research/causality.html
@@ -38,7 +38,7 @@
                         <h5>Challenge</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>Causality, among other topics, is one of the quickest growing subfields in machine learning. For various statistical and philosophical reasons is has a close relationship to intelligence. However, most research is tackling how to use ML to perform causal inference. I believed the reverse to be underrated, so I set out to document how machine learning researchers can use tools from causality to improve learning.</p>
+                        <p>Causality, among other topics, is one of the quickest growing subfields in machine learning. For various statistical and philosophical reasons, causality has a close relationship to intelligence. Namely, good causal modelling maps to good generative modelling, which is a core challenge in developing generalizable machine learning; further, causal information through interventions are efficient ways of learning desired functional relaitonships. While  the machine learning research community has focused mostly on <em>performing causal inference</em>, little attention has been paid to using tools from causality to <em>increase machine learning performance</em>.</p>
                     </div>
                 </div>
 
@@ -55,7 +55,7 @@
                         <h5>Results</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>I've written a review paper covering 50+ recent papers using tools from causality to improve machine learning. I cover how we can use tools from causality to improve generalization, efficiency, and concept learning. See also <a href='http://www.github.com/logangraham/arxausality'>arXausality</a>, a repo of all arXiv-published causality-in-machine-learning papers in the recent past.</p>
+                        <p>I've written a review paper covering 50+ recent papers using tools from causality to improve machine learning. I cover how we can use tools from causality to improve generalization, efficiency, and concept learning. I also define a series of research challenges. See also <a href='http://www.github.com/logangraham/arxausality'>arXausality</a>, a repo of all arXiv-published causality-in-machine-learning papers in the recent past.</p>
                     </div>
                 </div>
             </div>
