--- a/research/header.html
+++ b/research/header.html
@@ -6,10 +6,10 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="research.html">Research</a>
+        <a class="nav-link" href="http://www.logangraham.xyz/research.html">Research</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="blog">Blog</a>
+        <a class="nav-link" href="http://www.logangraham.xyz/blog">Blog</a>
       </li>
     </ul>
   </div>
