--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                 <a href="http://www.awakelabs.com" title="A wearable device that predicts meltdowns before they happen in kids with Autism" data-toggle="tooltip" data-placement="top">a biotech startup</a>,
                 a
                 <a href="http://www.yunusandyouth.com" title="A global fellowship for superstar young social entrepreneurs" data-toggle="tooltip" data-placement="top">fellowship for social entrepreneurs</a>,
-                and worked for a long time to help
-                <a href="http://www.awesomeitis.com" title="An online patient-to-patient mentoring platform, starting with Arthritis" data-toggle="tooltip" data-placement="top">kids with Arthritis.</a>
+                and worked for a long time to help kids with Arthritis.
               </p>
               <p>
                 <a href="/blog" class="read-more">I write some things here →</a>
