--- a/index.html
+++ b/index.html
@@ -46,20 +46,12 @@
             </div>
             <div class="col-md-7">
               <p>
-                I'm currently a PhD student with the Machine Learning Research Group at the University of Oxford,
-                where I study as a Rhodes Scholar. I'm also a several-time entrepreneur. I believe in using
-                technology and business to solve the world's toughest challenges.
+                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. Currently, I'm an AI resident at <a href='www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems.
               </p>
               <p>
-                I research how we can improve <b>machine learning</b> with tools from
-                <b>causality</b> and economics. I'm specifically interested in how we can
-                use experimentation, object-relation reasoning, and structural
-                equation modelling to create more efficient and generalizable intelligence.
-                <a href='/papers'>I curate interesting papers here</a> – you might like them.
+                I research how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
               </p>
-              <p>
-                I also research:
-                30 years from now, how many of our jobs will be automated, why, and what new industries will automation create?
+              <p> I've also researched the future of jobs, using machine learning to predict what tasks and occupations can be automated. <a href='/papers'>I curate interesting papers here</a> – you might like them.
               </p>
               <p>
                 I'm an entrepreneur, salsa dancer, and rower. I started and ran
@@ -70,16 +62,13 @@
                 and worked for a long time to help kids with Arthritis.
               </p>
               <p>
-                <a href="/blog" class="read-more">I write some things here →</a>
+                <a href="/blog" class="read-more">I write some things here →</a> Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
-                Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
-              </p>
-              <p>
-                <b>Reading topic of the month:</b> Economic Systems of the Far Future.
-                Currently reading <em><a href="https://www.goodreads.com/book/show/17863.Accelerando">Accelerando</a></em>,
-                <em><a href="https://www.goodreads.com/book/show/39910326-economic-science-fictions">Economic Science Fictions</a></em>,
-                and <em><a href="https://www.goodreads.com/book/show/31283667-stubborn-attachments">Stubborn Attachments</a></em>
+                <b>Reading topics of the month:</b> Environment, Indigeneous issues, and systems change.
+                Currently reading <em><a href="https://www.goodreads.com/book/show/15797661-the-once-and-future-world">The Once and Future World</a></em>,
+                <em><a href="https://www.goodreads.com/book/show/15797509-the-inconvenient-indian">The Inconvenient Indian</a></em>,
+                and <em><a href="https://www.goodreads.com/book/show/3828902-thinking-in-systems">Thinking in Systems</a></em>
               </p>
             </div>
           </div>
