--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-7">
               <p>
-                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. Currently, I'm an AI resident at <a href='www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems.
+                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. Currently, I'm an AI resident at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems.
               </p>
               <p>
                 I research how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
@@ -62,7 +62,7 @@
                 and worked for a long time to help kids with Arthritis.
               </p>
               <p>
-                <a href="/blog" class="read-more">I write some things here →</a> Here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
+                <a href="/blog" class="read-more">I write some things here →</a> and here are <a href="http://logangraham.xyz/blog/Papers-You-Should-Write">some papers you should write.</a>
               </p>
               <p>
                 <b>Reading topics of the month:</b> Environment, Indigeneous issues, and systems change.
