Apnea: reflecting new paper work

--- a/research/apnea.html
+++ b/research/apnea.html
@@ -20,7 +20,6 @@
                     </div>
                     <div class='col-sm-8'>
                         <h4 class='research-title'>Machine Learning-based Pediatric Sleep Apnea Prioritization </h4>
-                        <p><em>Paper under submission at a leading sleep journal; code published December 2018.</em></p>
                     </div>
                 </div>
 
@@ -29,7 +28,7 @@
                         <h5>In a tweet</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>Using out-of-the-box machine learning approaches, we show we can outperform the current state of the art in fast-paced patient risk prioritization in predicting if a child has sleep apnea or not.</p>
+                        <p>We show that even basic machine learning, as well as more advanced hand-crafted and genetically-discovered models, can outperform the current state of the art in fast-paced patient risk prioritization in predicting if a child has sleep apnea or not.</p>
                     </div>
                 </div>
 
@@ -43,18 +42,11 @@
                 </div>
 
                 <div class='row'>
-                    <div class='col-sm-2'></div>
-                    <div class='col-sm-8'>
-                        <img class='research-image-column research-image-large' src='assets/apnea.png'>
-                    </div>
-                </div>
-
-                <div class='row'>
                     <div class='col-sm-2'>
                         <h5>Solution</h5>
                     </div>
                     <div class='col-sm-8'>
-                        <p>Working with small (~450 observation) datasets, we showed how straightforward feature engineering and dimensionality reduction can significantly improve our classifiers over the human-heuristic benchmark. Good feature engineering with optimized nonparametric kernel methods were chosen to extract what we believe are patterns of hidden heterogeneity in the model.</p>
+                        <p>Working with small (~450 observation) datasets, we show how both feature engineering and hierarchical models can improve over the state of the art in doctor heuristics. We discuss their generalization capabilities across new datasets.</p>
                     </div>
                 </div>
 
