Apnea image change

--- a/research/html/sections/machine_learning.html
+++ b/research/html/sections/machine_learning.html
@@ -67,7 +67,7 @@
 <div class='row'>
     <div class='col-sm-2 research-thumbnail-column'>
         <a href='research/apnea'>
-        <img class='research-thumbnail' src="research/assets/apnea.png">
+        <img class='research-thumbnail' src="https://www.electronicproducts.com/uploadedImages/Robotics/AI/Java_Code.png">
         </a>
     </div>
     <div class='col-sm-8'>
