--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-7">
               <p>
-                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. Currently, I'm an AI resident at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems.
+                I'm a PhD student with the Machine Learning Research Group at the University of Oxford, where I study as a Rhodes Scholar. I'm also researching causal machine learning with <a href='http://www.babylonhealth.com'>Babylon Health</a>. Previously, I was an AI resident at <a href='http://www.x.company'>X</a>, Google's moonshot laboratory. I believe in combining technology and economics to tackle the world's most important problems.
               </p>
               <p>
                 I research how we can improve <b>machine learning</b> with <b>causality</b> and <b>interpretability</b>. I'm specifically interested in how we can use causal reasoning to improve learning efficiency and generalization; using pseudo-causal concepts to improve interpretability; and deploying machine learning to safety-critical human-use situations.
